--- a/BloodDonation/Web.config
+++ b/BloodDonation/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -44,5 +44,13 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
   </entityFramework>
+  <connectionStrings>
+    <add name="db_a8c2c8_blooddonationEntities" connectionString="metadata=res://*/OnlineBloodDonationModel.csdl|res://*/OnlineBloodDonationModel.ssdl|res://*/OnlineBloodDonationModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL8004.site4now.net;initial catalog=db_a8c2c8_blooddonation;persist security info=True;user id=db_a8c2c8_blooddonation_admin;password=Qwerty_009;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
