User Types CRUD Added

--- a/BloodDonation/BloodDonation.csproj
+++ b/BloodDonation/BloodDonation.csproj
@@ -229,10 +229,12 @@
     <Compile Include="Controllers\CityTablesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RequestTypeController.cs" />
+    <Compile Include="Controllers\UserTypeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\RequestTypeMV.cs" />
+    <Compile Include="Models\UserTypeMV.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -277,14 +279,16 @@
     <Content Include="Views\Home\MainHome.cshtml" />
     <Content Include="Views\CityTables\Create.cshtml" />
     <Content Include="Views\CityTables\Delete.cshtml" />
-    <Content Include="Views\CityTables\Details.cshtml" />
     <Content Include="Views\CityTables\Edit.cshtml" />
     <Content Include="Views\CityTables\Index.cshtml" />
     <Content Include="Views\RequestType\AllRequestType.cshtml" />
     <Content Include="Views\RequestType\Edit.cshtml" />
     <Content Include="Views\RequestType\Delete.cshtml" />
     <Content Include="Views\RequestType\Create.cshtml" />
-    <Content Include="Views\RequestType\Details.cshtml" />
+    <Content Include="Views\UserType\AllUserType.cshtml" />
+    <Content Include="Views\UserType\Create.cshtml" />
+    <Content Include="Views\UserType\Edit.cshtml" />
+    <Content Include="Views\UserType\Delete.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
