--- a/BloodDonation/BloodDonation.csproj
+++ b/BloodDonation/BloodDonation.csproj
@@ -226,6 +226,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\BloodGroupController.cs" />
     <Compile Include="Controllers\CityTablesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RequestTypeController.cs" />
@@ -233,6 +234,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BloodGroupsMV.cs" />
     <Compile Include="Models\RequestTypeMV.cs" />
     <Compile Include="Models\UserTypeMV.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -289,6 +291,10 @@
     <Content Include="Views\UserType\Create.cshtml" />
     <Content Include="Views\UserType\Edit.cshtml" />
     <Content Include="Views\UserType\Delete.cshtml" />
+    <Content Include="Views\BloodGroup\AllBloodGroups.cshtml" />
+    <Content Include="Views\BloodGroup\Create.cshtml" />
+    <Content Include="Views\BloodGroup\Edit.cshtml" />
+    <Content Include="Views\BloodGroup\Delete.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
