All New User Details Added

--- a/BloodDonation/BloodDonation.csproj
+++ b/BloodDonation/BloodDonation.csproj
@@ -226,6 +226,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AccountsController.cs" />
     <Compile Include="Controllers\AccountStatusController.cs" />
     <Compile Include="Controllers\BloodGroupController.cs" />
     <Compile Include="Controllers\CityTablesController.cs" />
@@ -313,6 +314,8 @@
     <Content Include="Views\Registration\DonorUser.cshtml" />
     <Content Include="Views\Registration\BloodBankUser.cshtml" />
     <Content Include="Views\Registration\SeekerUser.cshtml" />
+    <Content Include="Views\Accounts\AllNewUserRequests.cshtml" />
+    <Content Include="Views\Accounts\UserDetails.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
