--- a/BloodDonation/BloodDonation.csproj
+++ b/BloodDonation/BloodDonation.csproj
@@ -158,6 +158,7 @@
     <Content Include="Content\Template\images\home_1_slider_1.jpg" />
     <Content Include="Content\Template\images\home_1_slider_2.jpg" />
     <Content Include="Content\Template\images\loader.gif" />
+    <Content Include="Content\Template\images\login_bg.jpg" />
     <Content Include="Content\Template\images\logo-footer.png" />
     <Content Include="Content\Template\images\logo.png" />
     <Content Include="Content\Template\images\logo_1.jpg" />
@@ -316,6 +317,7 @@
     <Content Include="Views\Registration\SeekerUser.cshtml" />
     <Content Include="Views\Accounts\AllNewUserRequests.cshtml" />
     <Content Include="Views\Accounts\UserDetails.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
