Accept Request By Donor Added

--- a/BloodDonation/BloodDonation.csproj
+++ b/BloodDonation/BloodDonation.csproj
@@ -347,6 +347,7 @@
     <Content Include="Views\Home\AboutUs.cshtml" />
     <Content Include="Views\Finder\RequestForBlood.cshtml" />
     <Content Include="Views\Finder\ShowAllRequests.cshtml" />
+    <Content Include="Views\Finder\DonorRequests.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
